fix: wrapping on mobile

--- a/src/assets/css/index.styl
+++ b/src/assets/css/index.styl
@@ -1,9 +1,6 @@
 .comments
   table-layout: fixed
 
-td
-  word-wrap: break-word
-
 .markdown
   visibility: hidden
 
@@ -75,3 +72,6 @@ button:focus
     width: 95%
   .header 
     width: 95%
+  .wrap
+    white-space: normal !important
+
